# statballerzbackend

./: Procfile  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt
env/Scripts/: activate  activate.bat
myproject/: pyproject.toml
myproject/tests/: test_myproject.py
statballerz/: apps.py  models.py  serializers.py  urls.py  views.py
statballerz/migrations/: 0001_initial.py
team40/: asgi.py  settings.py  urls.py  wsgi.py
