[tool.poetry]
name = "team40"
version = "0.1.0"
description = ""
authors = ["Shawon Sheikh <sxs1748@cs.bham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pyproject-toml = "^0.0.11"
0 = "^0.0.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
